# vehicle-demo

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/cross/rpi/: Dockerfile
docker/vehicle/: Dockerfile  run.sh
proto/: battery.proto  current_location.proto  exterior.proto  lock_state.proto  speed.proto  tire.proto  trip_data.proto
vehicle/common/: Cargo.toml
vehicle/common/src/: lib.rs  publishers.rs  subscribers.rs  topics.rs
vehicle/dashboard/: Cargo.toml  build.rs
vehicle/dashboard/src/: led_pwm.rs  lib.rs  main.rs
vehicle/dashboard/ui/: main_window.slint  theme.slint
vehicle/dashboard/ui/components/: ambient_temperature.slint  battery_status.slint  connectivity_status.slint  left_widget.slint  right_widget.slint  speedometer.slint  state_adapter.slint  telltales.slint
vehicle/dashboard/ui/pages/: dashboard.slint  lock_screen.slint  page.slint
vehicle/signal_mocker_service/: Cargo.toml
vehicle/signal_mocker_service/config/: mock_data.json5
vehicle/signal_mocker_service/src/: config.rs  generators.rs  lib.rs  main.rs  msg_generators.rs  task_spawner.rs
vehicle/twin_service/: Cargo.toml
vehicle/twin_service/config/: twin_config.json5  vehicle_initial_state.json5
vehicle/twin_service/src/: cloud_communicator.rs  command_processor.rs  config.rs  lib.rs  main.rs  twin.rs  vehicle_state.rs  vehicle_state_provider.rs
vehicle/update_client/: Cargo.toml
vehicle/update_client/src/: main.rs
vehicle/vehicle_msgs/: Cargo.toml  build.rs
vehicle/vehicle_msgs/src/: lib.rs
