[workspace]
resolver = "2"
members = [
    "vehicle/twin_service",
    "vehicle/update_client",
    "vehicle/vehicle_msgs",
    "vehicle/signal_mocker_service",
]

[workspace.metadata]
rust-analyzer = true

[workspace.dependencies]
tokio = { version = "1.40.0", default-features = false }
zenoh = { version = "1.0.0" }
futures = { version = "0.3.30" }
clap = { version = "4.5.17", features = ["derive"] }
log = { version = "0.4.22" }
env_logger = { version = "0.11.5" }
prost = "0.13.2"
prost-types = "0.13.2"
prost-build = "0.13.2"
chrono = "0.4.38"
async-trait = "0.1.82"
json5 = "0.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"


[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
