[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
zenoh = { workspace = true, default-features = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
slint = { workspace = true }
chrono = { workspace = true }
# Workspace dependencies
vehicle_msgs = { path = "../vehicle_msgs" }
common = { path = "../common" }

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
rppal = "0.19.0"

[build-dependencies]
slint-build = { workspace = true }
