[package]
name = "signal_mocker_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
zenoh = { workspace = true, default-features = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
json5 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
# Workspace dependencies
vehicle_msgs = { path = "../vehicle_msgs" }
common = { path = "../common" }
