[package]
name = "update_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
zenoh = { workspace = true, default-features = true }
futures = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
